--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -5,13 +5,21 @@
     tools:context=".MenuActivity"
     android:background="@drawable/sky_clean" >
 	
-    <ImageView 
-        android:id="@+id/clouds"
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:scaleType="matrix"
-    	android:src="@drawable/clouds" />
-     
+    <HorizontalScrollView 
+        android:id="@+id/cloudsContainer"
+        android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_marginTop="20dp" >
+	    
+	    <ImageView 
+	        android:id="@+id/clouds"
+	        android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
+	    	android:scaleType="matrix"
+	    	android:src="@drawable/clouds" />
+    
+    </HorizontalScrollView>
+         
     <ImageView 
         android:id="@+id/titleSign"
         android:layout_width="wrap_content"
@@ -27,7 +35,7 @@
     	android:layout_centerVertical="true"
     	android:layout_marginLeft="50dp"
     	android:layout_marginRight="50dp"
-    	android:paddingTop="80dp"
+    	android:paddingTop="75dp"
     	android:orientation="vertical" >
     	
         <Button 
