--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -19,7 +19,12 @@
 	    	android:src="@drawable/clouds" />
     
     </HorizontalScrollView>
-         
+    <!-- Marche pas pour l instant 
+    <com.quizz.places.widgets.MenuBackground
+        android:id="@+id/haloBackground"
+        android:layout_width="match_parent"
+     	android:layout_height="match_parent" />
+     -->
     <ImageView 
         android:id="@+id/titleSign"
         android:layout_width="wrap_content"
@@ -29,13 +34,21 @@
     	android:src="@drawable/title"
     	android:visibility="gone" />
     
+    <ImageView 
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:src="@drawable/quizz_footer"
+    	android:layout_alignParentBottom="true"
+    	android:scaleType="fitEnd"
+    	android:visibility="invisible" />
+    
     <LinearLayout
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:layout_centerVertical="true"
     	android:layout_marginLeft="50dp"
     	android:layout_marginRight="50dp"
-    	android:paddingTop="75dp"
     	android:orientation="vertical" >
     	
         <Button 
