--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -9,7 +9,8 @@
         android:id="@+id/cloudsContainer"
         android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_marginTop="20dp" >
+	    android:layout_marginTop="20dp"
+	    android:scrollbars="none" >
 	    
 	    <ImageView 
 	        android:id="@+id/clouds"
@@ -44,12 +45,14 @@
     	android:visibility="invisible" />
     
     <LinearLayout
+        android:id="@+id/menuButtonsContainer"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:layout_centerVertical="true"
     	android:layout_marginLeft="50dp"
     	android:layout_marginRight="50dp"
-    	android:orientation="vertical" >
+    	android:orientation="vertical"
+    	android:visibility="gone" >
     	
         <Button 
             android:id="@+id/buttonPlay"
