--- a/res/layout/fragment_grid_levels.xml
+++ b/res/layout/fragment_grid_levels.xml
@@ -3,17 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 	
-    <ImageView
-        android:id="@+id/photoView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/photo_border_white"
-        android:paddingBottom="11dp"
-        android:paddingLeft="9dp"
-        android:paddingRight="12dp"
-        android:paddingTop="8dp"
-        android:rotation="12"
-        android:scaleType="fitXY"
-        android:src="@drawable/big_ben" />
+    <GridView 
+        android:id="@+id/gridLevels"
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent" 
+    	android:columnWidth="120dp"
+    	android:numColumns="auto_fit" />
     
 </RelativeLayout>
