--- a/res/layout/item_list_sections.xml
+++ b/res/layout/item_list_sections.xml
@@ -37,10 +37,11 @@
 
    	    <ImageView 
    	        android:id="@+id/sectionEnterButton"
-   	        android:layout_width="60dp"
+   	        android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_below="@+id/sectionNbPoints"
     		android:layout_alignBottom="@+id/sectionNbLevels"
+    		android:layout_margin="6dp"
     		android:layout_alignParentRight="true"
     		android:src="@drawable/but_enter" />
  
