--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -18,6 +18,16 @@
     	android:visibility="gone" />
     
     <ImageView 
+        android:id="@+id/homeExit"
+        android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:src="@drawable/home_exit"
+    	android:layout_alignParentRight="true"
+    	android:layout_marginRight="10dp"
+    	android:layout_marginTop="10dp"
+    	android:visibility="gone" />
+    
+    <ImageView 
         android:id="@+id/footer"
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
