--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -17,14 +17,15 @@
     	android:src="@drawable/title"
     	android:visibility="gone" />
     
-    <ImageView 
-        android:id="@+id/homeExit"
+    <ImageButton 
+        android:id="@+id/buttonHomeExit"
         android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:src="@drawable/home_exit"
+    	android:src="@drawable/exit_button_selector"
+    	android:background="@null"
     	android:layout_alignParentRight="true"
-    	android:layout_marginRight="10dp"
-    	android:layout_marginTop="10dp"
+    	android:layout_marginRight="6dp"
+    	android:layout_marginTop="6dp"
     	android:visibility="gone" />
     
     <ImageView 
@@ -55,7 +56,7 @@
             android:shadowRadius="2"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:background="@drawable/but_blue" />
+            android:background="@drawable/blue_button_selector" />
         
         <Button 
             android:id="@+id/buttonFreeHints"
@@ -67,7 +68,7 @@
             android:shadowRadius="2"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/but_magenta" />
+            android:background="@drawable/magenta_button_selector" />
 
         <Button 
             android:id="@+id/buttonStats"
@@ -79,7 +80,7 @@
             android:shadowRadius="2"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/but_orange" />
+            android:background="@drawable/orange_button_selector" />
         
         <Button 
             android:id="@+id/buttonSettings"
@@ -91,7 +92,7 @@
             android:shadowRadius="2"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/but_green" />
+            android:background="@drawable/green_button_selector" />
         
     </LinearLayout>
 
