--- a/res/layout/layout_quizz_action_bar.xml
+++ b/res/layout/layout_quizz_action_bar.xml
@@ -1,51 +1,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ab_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_actionbar" >
+    android:layout_height="match_parent" >
 
-    <ImageView
-        android:id="@id/ab_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="8dp"
-        android:scaleType="fitStart" />
-
-    <TextView
-        android:id="@id/ab_middle_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:shadowColor="#000"
-        android:shadowRadius="2"
-        android:textColor="#FFF"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@id/ab_right_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:shadowColor="#000"
-        android:shadowRadius="2"
-        android:textColor="#FFF"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/separator_shadow" >
+        android:layout_height="match_parent"
+        android:layout_above="@+id/ab_separator"
+        android:background="@drawable/bg_actionbar" >
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000" />
-    </LinearLayout>
+        <ImageView
+            android:id="@id/ab_back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="8dp"
+            android:scaleType="fitStart" />
+
+        <TextView
+            android:id="@id/ab_middle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:shadowColor="#000"
+            android:shadowRadius="2"
+            android:textColor="#FFF"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@id/ab_right_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:shadowColor="#000"
+            android:shadowRadius="2"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/ab_separator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/ab_separator_shadow"
+        android:background="#000" />
+
+    <include
+        android:id="@+id/ab_separator_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/ab_shadow_height"
+        android:layout_alignParentBottom="true"
+        layout="@layout/layout_shadow" />
 
 </RelativeLayout>
