--- a/res/drawable/bg_actionbar_separator.xml
+++ b/res/drawable/bg_actionbar_separator.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 	<gradient
-	android:endColor="#FFEEEEEE"
-	android:centerColor="#FFDDDDDD"
-	android:startColor="#FFBBBBBB"
+	android:startColor="#ACACAC"
+	android:centerColor="#FFBDBDBD"
+	android:endColor="#CCCCCC"
 	android:angle="90"/>
 </shape>
