--- a/res/layout/item_grid_levels.xml
+++ b/res/layout/item_grid_levels.xml
@@ -13,14 +13,39 @@
         android:paddingTop="8dp"
         android:scaleType="fitCenter"
         android:rotation="12"
-        android:layout_margin="15dp"
-        android:adjustViewBounds="true" />"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="30dp"
+        android:adjustViewBounds="true" />
    	
-	<ImageView
-       	android:id="@+id/levelDifficulty"
-       	android:layout_width="wrap_content"
-	   	android:layout_height="wrap_content" />
-	
+   	<LinearLayout 
+   		android:id="@+id/levelDifficulty"
+   	    android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/levelPicture"
+        android:layout_alignRight="@+id/levelPicture"
+        android:layout_below="@+id/levelPicture"
+        android:gravity="center"
+        android:background="@drawable/bg_difficulty_rounded" >
+		
+		<ImageView
+       		android:layout_width="wrap_content"
+	   		android:layout_height="wrap_content"
+	   		android:src="@drawable/ic_star" />
+
+		<ImageView
+       		android:layout_width="wrap_content"
+	   		android:layout_height="wrap_content"
+	   		android:src="@drawable/ic_star" />
+			
+		<ImageView
+       		android:layout_width="wrap_content"
+	   		android:layout_height="wrap_content"
+	   		android:src="@drawable/ic_star" />
+				
+	</LinearLayout>
+   	
 	<ImageView
        	android:id="@+id/levelStatusIcon"
        	android:layout_width="wrap_content"
@@ -28,4 +53,9 @@
 		android:src="@drawable/ic_check"
 		android:visibility="gone" />
     
+	<View
+	    android:layout_width="wrap_content"
+	   	android:layout_height="10dp"
+	   	android:layout_below="@+id/levelDifficulty" />
+	
 </RelativeLayout>
