--- a/res/layout/fragment_list_sections.xml
+++ b/res/layout/fragment_list_sections.xml
@@ -10,4 +10,10 @@
     	android:divider="@null"
     	android:dividerHeight="0dp" />
 
+    <include layout="@layout/layout_loading_page"
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent"
+    	android:visibility="gone" />
+    
 </RelativeLayout>
