--- a/res/layout/item_achievement_stat.xml
+++ b/res/layout/item_achievement_stat.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<FrameLayout 
+	   xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
     
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_section_rounded">
     
-	    <ImageView
+	    <RelativeLayout
+	       android:id="@+id/IsAchievement"
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       android:layout_margin="5dp"
+	       android:background="@drawable/bg_section_rounded"
+	       >
+	       
+	       <ImageView
 	        android:id="@+id/StatIcon"
-	        android:layout_width="40dp"
-	        android:layout_height="40dp"
+	        android:layout_width="42px"
+	        android:layout_height="58px"
 	        android:layout_marginRight="10dp"
 	        android:gravity="center"
 	      	android:src="@drawable/ic_star" />
-	    
 	    <RelativeLayout
 	        android:layout_width="match_parent"
-		    android:layout_height="wrap_content" >
-	        
+		    android:layout_height="wrap_content"
+		    android:layout_toRightOf="@+id/StatIcon" >
 	        <LinearLayout 
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
 	            android:orientation="vertical"
 	            android:layout_toLeftOf="@+id/StatScores">
-	            
 	            <TextView
 		            android:id="@+id/StatLabel"
 			        android:layout_width="fill_parent"
@@ -37,7 +38,6 @@
 			        android:textStyle="bold"
 			        android:textSize="14dp"
 			        android:layout_marginLeft="10dp" />
-	            
 	            <com.quizz.core.widgets.SectionProgressView
 		        	android:id="@+id/StatProgress"
 		   	        android:layout_width="match_parent"
@@ -45,35 +45,29 @@
 		   	        android:src="@drawable/bg_section_progress"
 		   	        android:scaleType="fitXY"
 		   	        android:adjustViewBounds="true" />
-	            
 	        </LinearLayout>
-	        
 	        <LinearLayout 
 	            android:id="@+id/StatScores"
-	            android:layout_width="40dp"
+	            android:layout_width="45dp"
 	            android:layout_height="wrap_content"
 	            android:orientation="vertical"
 	            android:layout_alignParentRight="true"
 	            android:layout_marginLeft="10dp">
+	            <ImageView
+			        android:id="@+id/StatCupIcon"
+			        android:layout_width="29px"
+			        android:layout_height="36px"
+			        android:layout_gravity="center"
+			        android:src="@drawable/gray_cup" />
 	            <TextView 
 	                android:id="@+id/StatDoneOnTotal"
 	                android:layout_width="fill_parent"
 	                android:layout_height="wrap_content"
 	                android:text="67/130"
-	                android:gravity="bottom"
-	                android:textStyle="bold"/>
-	            <TextView
-	                android:id="@+id/StatPercentScore"
-	                android:layout_width="fill_parent"
-	                android:layout_height="wrap_content"
-	                android:text="51%"
-	                android:gravity="bottom"
+	                android:textSize="11dp"
+	                android:gravity="bottom|center_horizontal"
 	                android:textStyle="bold"/>
 	           </LinearLayout>
-	        
-	
-		</RelativeLayout>
-	
-	</LinearLayout>
-	
-</RelativeLayout>
+		</RelativeLayout>    
+	</RelativeLayout>
+</FrameLayout>
