Fix: Level status icon position

--- a/res/layout/item_grid_levels.xml
+++ b/res/layout/item_grid_levels.xml
@@ -5,8 +5,9 @@
 
     <LinearLayout
         android:id="@+id/levelPictureLayout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="170dp"
+        android:layout_centerHorizontal="true"
         android:gravity="center" >
 
         <ImageView
@@ -30,8 +31,10 @@
        	android:layout_width="wrap_content"
 	   	android:layout_height="wrap_content"
 		android:src="@drawable/ic_check"
-		android:layout_marginTop="20dp"
-		android:layout_marginRight="15dp" />
+		android:layout_alignTop="@+id/levelPictureLayout"
+		android:layout_alignRight="@+id/levelPictureLayout"
+		android:layout_marginTop="30dp"
+		android:layout_marginRight="18dp" />
     
     <include layout="@layout/include_difficulty" />
 
