--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -1,28 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
-    <LinearLayout 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        <RelativeLayout
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       android:layout_margin="5dp"
+	       android:background="@drawable/bg_section_rounded" >
         
-        <CheckBox
-        android:id="@+id/AudioCheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_off" />
+            <TextView 
+                android:id="@+id/AudioLabel"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/audio_off"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+            
+	        <CheckBox
+		        android:id="@+id/AudioCheckbox"
+		        android:layout_alignParentRight="true"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" />
 
-    <CheckBox
-        android:id="@+id/VibrationCheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/vibration_off" />  
+        </RelativeLayout>
         
+        <RelativeLayout
+	       android:layout_width="match_parent"
+	       android:layout_height="wrap_content"
+	       android:layout_margin="5dp"
+	       android:background="@drawable/bg_section_rounded" >
         
-    </LinearLayout>
+            <TextView 
+                android:id="@+id/VibrationLabel"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/vibration_off"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+        
+	        <CheckBox
+		        android:id="@+id/VibrationCheckbox"
+		        android:layout_alignParentRight="true"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" />
+	        
+	    </RelativeLayout>
 
-</FrameLayout>
+</LinearLayout>
