--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -17,6 +17,7 @@
                 android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:text="@string/audio_off"
+		        android:layout_marginLeft="10dp"
 		        android:textSize="15sp"
 		        android:textStyle="bold" />
             
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:text="@string/vibration_off"
+		        android:layout_marginLeft="10dp"
 		        android:textSize="15sp"
 		        android:textStyle="bold" />
         
